Revision history for Perl extension Bundle::Theory.

1.07
      - Corrected Spelling of Module::CoreList.
      - Added:
        + Test::Spelling
        + Test::XPath
        + Template::Declare
        + Template::Declare::Bricolage
        + Regexp::Grammars
        + YAML::Syck
      - Removed:
        + YAML
        + Time::Piece::ISO
        + Wiget::Meta
        + Duplicates.

1.06  2008-05-05T17:51:28
      - Added ExtUtils::XSBuilder to Bundle::Theory::Apache2.

1.05  2008-04-10T02:29:49
      - Added HTML::Template::Expr.
      - Added Bundle::Theory::Apache.
      - Added Bundle::Theory::Apache2.

1.04  2008-04-09T22:17:16
      - Added SVN::Notify::Filter::Markdown.
      - Added Text::Trac.

1.03  2008-04-02T19:26:52
      - Changed from nonexistent Test::Coverage to the correct name,
        Test::Pod::Coverage.
      - Changed from nonexistent Net::FTP::Server to the correct name,
        Net::FTPServer.
      - Removed IO::Socket::SSL for now, since its tests fail.
      - Added:
        + Want
        + Parse::RecDescent
        + JSON and JSON::XS
        + App::Ack
        + Modul::CoreList
        + PPI
        + Perl::Tidy
        + Scalar::Util
        + Text::Markdown
        + Text::MultiMarkdown
        + HTML::HeadParser

1.02  2008-02-05 00:07:25
      - Added `t/basic.t` so that it would actually be distributed. Duh.

1.01  2008-02-04 22:08:44
      - Added `t/basic.t`, which just makes sure the bundle module loads, so
        that there is at least one test for the distribution. This will
        eliminate those "UNKNOWN" test retults from cpan-testers.
      - Changed the "CONTENTS" header to uppercase to make `CPAN.pm` happy.
      - Added Module::Install.
      - Added CPAN::SQLite.

1.00  2008-02-03 01:59:58
      - Initial public release.